this is my final push.. some hard data and more working links lol

--- a/public/thread.html
+++ b/public/thread.html
@@ -113,9 +113,9 @@
 				<span class="absBotDisclaimer">All trademarks and copyrights on this page are owned by their respective parties. Images uploaded are the responsibility of the Poster. Comments are owned by the Poster.
 				</span>
 				<div id="footer-links">
-					<a href="nopageyet" target="_blank">About</a> • 
-					<a href="nopageyet" target="_blank">Feedback</a> • 
-					<a href="nopageyet" target="_blank">Contact</a>
+					<a href="/about" target="_blank">About</a> • 
+					<a href="/feedback" target="_blank">Feedback</a> • 
+					<a href="/contact" target="_blank">Contact</a>
 				</div>
 			</div>
 		</div>
